--- a/train.ipynb
+++ b/train.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,17 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1431\n",
-      "9\n",
-      "num training samples:  1152\n",
-      "num testing samples:  288\n"
+     "ename": "ValueError",
+     "evalue": "unsupported pickle protocol: 5",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-5f83c8cce0fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_channels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprocess_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mselected_output_variable\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# from benchmark code\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# reshape and convert datatype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Documents\\Stanford\\Courses\\2Q\\CS-230\\Project\\urban_emissions\\train_benchmark.ipynb\u001b[0m in \u001b[0;36mprocess_data\u001b[1;34m(data_file, selected_output_variable)\u001b[0m\n\u001b[0;32m     32\u001b[0m   },\n\u001b[0;32m     33\u001b[0m   {\n\u001b[1;32m---> 34\u001b[1;33m    \u001b[1;34m\"cell_type\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m\"code\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m    \u001b[1;34m\"execution_count\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m13\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m    \u001b[1;34m\"metadata\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: unsupported pickle protocol: 5"
      ]
     }
    ],
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(x_train, y_train, num_epochs, save=False, model_tag=''):\n",
+    "def train(x_train, y_train, x_test, y_test, num_epochs, save=False, model_tag=''):\n",
     "    \"\"\"\n",
     "    Train model on training data. If save=True, trained model is saved in ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
     "    Input:\n",
@@ -134,13 +136,20 @@
     "    print('Training...')\n",
     "    t0 = time.time()\n",
     "    train_losses = []\n",
+    "    test_losses = []\n",
     "    optimizer.zero_grad() # clear gradients\n",
     "    for epoch in range(num_epochs):\n",
     "        output = net(x_train)\n",
     "        loss = criterion(output, y_train)\n",
     "        if (epoch%10 == 0): # save every 10th loss\n",
+    "            # Train losses\n",
     "            train_losses.append(loss)\n",
     "            print('\\tloss at epoch %i = %f' %(epoch, loss))\n",
+    "            # Track test losses\n",
+    "            test_output = net(x_test)\n",
+    "            test_loss = criterion(test_output, y_test).item()\n",
+    "            test_losses.append(test_loss)\n",
+    "            print('\\test loss at epoch %i = %f' %(epoch, test_loss))\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
@@ -160,8 +169,12 @@
     "        with open(path, 'w') as f:\n",
     "            f.write(\"Size of x_train: %s\" %(str(x_train.shape)))\n",
     "            f.write(\"\\nSize of y_train: %s\\n\" %(str(y_train.shape)))\n",
+    "            f.write(\"\\n Train loss\")\n",
     "            for i, loss in enumerate(train_losses):\n",
     "                f.write(\"\\nLoss at epoch %i: %f\" %(i*10, loss)) # CHANGE THIS\n",
+    "            f.write(\"\\n Test loss\")\n",
+    "            for i, loss in enumerate(test_losses):\n",
+    "                f.write(\"\\nTest Loss at epoch %i: %f\" %(i*10, loss)) # CHANGE THIS\n",
     "            f.write(\"\\n\\nTotal train time: %fs\" %(time.time() - t0))\n",
     "        \n",
     "    return net"
@@ -176,11 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs = 100 # number iterations for gradient descent"
+    "num_epochs = 100 # number iterations for gradient descent\n",
+    "\n",
+    "# Varying learning rates\n",
+    "alphas = [0.001, 0.01, 0.05, 0.1, 0.5, 1]\n",
+    "\n",
+    "# Varying number of layers\n",
+    "Ls = [1, 5, 10, 20, 50, 75]\n",
+    "\n",
+    "# Varying optimizers\n",
+    "optimizers = ['SGD', 'Adam']\n",
+    "\n",
+    "# Number of iterations \n",
+    "num_epochs_ = [100, 250, 500, 100] "
    ]
   },
   {
@@ -222,22 +247,60 @@
     "# print(net)\n",
     "\n",
     "# initialize loss function and optimizer\n",
-    "criterion = nn.MSELoss() # for regression\n",
-    "optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
+    "if 'AQI' in selected_output_variable:\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "else:\n",
+    "    criterion = nn.MSELoss() # for regression\n",
     "\n",
-    "# train model and save to ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
-    "model_tag = '1_hidden_relu'\n",
-    "train(X, y, num_epochs, True, model_tag)\n",
+    "# Test learning rates\n",
+    "for alpha in alphas:\n",
+    "    print(\"Training with learning rate: {}\".format(alpha))\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=alpha)\n",
     "\n",
-    "# test model\n",
-    "print('Testing...')\n",
-    "output = net(X_test)\n",
-    "loss = criterion(output, y_test).item()\n",
-    "print('\\tTest loss = ', loss)"
+    "    # train model and save to ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
+    "    model_tag = '1_hidden_relu__alpha_{}'.format(alpha)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "\n",
+    "    # test model\n",
+    "    #print('Testing')\n",
+    "    #output = net(X_test)\n",
+    "    #loss = criterion(output, y_test).item()\n",
+    "    #print('\\tTest loss = ', loss)\n",
+    "    \n",
+    "# Test optimizers\n",
+    "for optimizer in optimizers:\n",
+    "    if optimizer == 'SGD':\n",
+    "        optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
+    "    else: \n",
+    "        optimizer = optim.Adam(net.parameters(), lr=0.05)\n",
+    "    \n",
+    "    print(\"Training optimizer: {}\".format(optimizer))\n",
+    "    model_tag = '1_hidden_relu__optimizer_{}'.format(optimizer)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "    \n",
+    "# Test iterations\n",
+    "for num_epochs in num_epochs_:\n",
+    "    print(\"Training number of epochs: {}\".format(num_epochs))\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
+    "\n",
+    "    # train model and save to ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
+    "    model_tag = '1_hidden_relu__epochs_{}'.format(num_epochs)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -253,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
