--- a/train.ipynb
+++ b/train.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,9 @@
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "import os\n",
-    "from ipynb.fs.defs.train_benchmark import process_data; # pip install ipynb"
+    "from ipynb.fs.defs.train_benchmark import process_data; # pip install ipynb\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -32,8 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Set dataset locations\n",
@@ -43,15 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num training samples:  1543\n",
-      "num testing samples:  386\n"
+     "ename": "ValueError",
+     "evalue": "unsupported pickle protocol: 5",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-6-5f83c8cce0fb>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mX\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0my\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mres\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mnum_channels\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mm\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mprocess_data\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdata_file\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mselected_output_variable\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# from benchmark code\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;31m# reshape and convert datatype\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mX\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfrom_numpy\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mX\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mT\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mto\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfloat\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0my\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfrom_numpy\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0my\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mT\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mto\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfloat\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Documents\\Stanford\\Courses\\2Q\\CS-230\\Project\\urban_emissions\\train_benchmark.ipynb\u001B[0m in \u001B[0;36mprocess_data\u001B[1;34m(data_file, selected_output_variable)\u001B[0m\n\u001B[0;32m     32\u001B[0m   },\n\u001B[0;32m     33\u001B[0m   {\n\u001B[1;32m---> 34\u001B[1;33m    \u001B[1;34m\"cell_type\"\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;34m\"code\"\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     35\u001B[0m    \u001B[1;34m\"execution_count\"\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;36m2\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     36\u001B[0m    \u001B[1;34m\"metadata\"\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;33m{\u001B[0m\u001B[1;33m}\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mValueError\u001B[0m: unsupported pickle protocol: 5"
      ]
     }
    ],
@@ -117,8 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_learning(train_loss, test_loss):\n",
+    "    plt.plot(train_loss)\n",
+    "    plt.plot(test_loss)\n",
+    "    plt.legend(['Train loss', 'Test loss'])\n",
+    "    plt.show()\n",
+    "    plt.clf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def train(x_train, y_train, x_test, y_test, num_epochs, save=False, model_tag=''):\n",
@@ -149,6 +184,9 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
+    "    # Plot training and test loss\n",
+    "    plot_learning(train_losses, test_losses)\n",
+    "    \n",
     "    # save trained model and training details\n",
     "    if (save):\n",
     "        train_date = date.today()\n",
@@ -178,7 +216,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Define hyperparameters"
    ]
@@ -192,10 +234,10 @@
     "num_epochs = 100 # number iterations for gradient descent\n",
     "\n",
     "# Varying learning rates\n",
-    "alphas = [0.001, 0.01, 0.05, 0.1, 0.5, 1]\n",
+    "alphas = [0.0001, 0.0005, 0.001, 0.01, 0.05, 0.1]\n",
     "\n",
     "# Varying number of layers\n",
-    "Ls = [1, 5, 10, 20, 50, 75]\n",
+    "#Ls = [1, 5, 10, 20, 50, 75]\n",
     "\n",
     "# Varying optimizers\n",
     "optimizers = ['SGD', 'Adam']\n",
@@ -206,9 +248,120 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Main"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Initialize network\n",
+    "net = Net(res, num_channels, m)\n",
+    "L = len(list(net.parameters())) # number of layers\n",
+    "# print(net)\n",
+    "\n",
+    "# Initialize loss function and optimizer\n",
+    "if 'AQI' in selected_output_variable:\n",
+    "    criterion = nn.CrossEntropyLoss() # classification\n",
+    "else:\n",
+    "    criterion = nn.MSELoss() # regression\n",
+    "\n",
+    "# Test learning rates\n",
+    "for alpha in alphas:\n",
+    "    print(\"Training with learning rate: {}\".format(alpha))\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=alpha)\n",
+    "\n",
+    "    # train model and save to ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
+    "    model_tag = '1_hidden_relu__alpha_{}'.format(alpha)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "    \n",
+    "# Test optimizers\n",
+    "for optimizer_name in optimizers:\n",
+    "    if optimizer_name == 'SGD':\n",
+    "        optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
+    "    else: \n",
+    "        optimizer = optim.Adam(net.parameters(), lr=0.05)\n",
+    "    \n",
+    "    print(\"Training optimizer: {}\".format(optimizer_name))\n",
+    "    model_tag = '1_hidden_relu__optimizer_{}'.format(optimizer_name)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "    \n",
+    "# Test iterations\n",
+    "for num_epochs in num_epochs_:\n",
+    "    print(\"Training number of epochs: {}\".format(num_epochs))\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
+    "\n",
+    "    # train model and save to ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
+    "    model_tag = '1_hidden_relu__epochs_{}'.format(num_epochs)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "    \n",
+    "# Test trained model\n",
+    "#print('Testing')\n",
+    "#output = net(X_test)\n",
+    "#loss = criterion(output, y_test).item()\n",
+    "#print('\\tTest loss = ', loss)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialize network\n",
+    "net = Net(res, num_channels, m)\n",
+    "L = len(list(net.parameters())) # number of layers\n",
+    "# print(net)\n",
+    "\n",
+    "# Initialize loss function and optimizer\n",
+    "if 'AQI' in selected_output_variable:\n",
+    "    criterion = nn.CrossEntropyLoss() # classification\n",
+    "else:\n",
+    "    criterion = nn.MSELoss() # regression\n",
+    "\n",
+    "# Test learning rates\n",
+    "for alpha in alphas:\n",
+    "    print(\"Training with learning rate: {}\".format(alpha))\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=alpha)\n",
+    "\n",
+    "    # train model and save to ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
+    "    model_tag = '1_hidden_relu__alpha_{}'.format(alpha)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "    \n",
+    "# Test optimizers\n",
+    "for optimizer_name in optimizers:\n",
+    "    if optimizer_name == 'SGD':\n",
+    "        optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
+    "    else: \n",
+    "        optimizer = optim.Adam(net.parameters(), lr=0.05)\n",
+    "    \n",
+    "    print(\"Training optimizer: {}\".format(optimizer_name))\n",
+    "    model_tag = '1_hidden_relu__optimizer_{}'.format(optimizer_name)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "    \n",
+    "# Test iterations\n",
+    "for num_epochs in num_epochs_:\n",
+    "    print(\"Training number of epochs: {}\".format(num_epochs))\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
+    "\n",
+    "    # train model and save to ./03_Trained_Models/NN/model_date_<model_tag>.pt\n",
+    "    model_tag = '1_hidden_relu__epochs_{}'.format(num_epochs)\n",
+    "    train(X_train, y_train, X_test, y_test, num_epochs, True, model_tag)\n",
+    "    \n",
+    "# Test trained model\n",
+    "#print('Testing')\n",
+    "#output = net(X_test)\n",
+    "#loss = criterion(output, y_test).item()\n",
+    "#print('\\tTest loss = ', loss)"
    ]
   },
   {
@@ -903,13 +1056,6 @@
     "#loss = criterion(output, y_test).item()\n",
     "#print('\\tTest loss = ', loss)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -932,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
